fix: hide horizontal scrollbar in globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
   scrollbar-width: none; /* Firefox */
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
-:root::-webkit-scrollbar {
+:root:-webkit-scrollbar {
   display: none;
 }
 @media (prefers-color-scheme: dark) {
@@ -23,6 +23,7 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: "Montserrat", sans-serif;
+  overflow-x: hidden; /* Add this line */
 }
 
 @layer utilities {
